@@ -1,3 +1,10 @@
+Thu Sep 29 17:25:39 2005  Simon McQueen  <sm@prismtech.com>
+
+        * orbsvcs/tests/Bug_2247_Regression/test_i.cpp:
+        * orbsvcs/tests/Bug_2247_Regression/test_i.h:
+
+          Fixing the inevitable emulated exception errors.
+
 Thu Sep 29 10:02:19 2005  Chris Cleeland  <cleeland_c@ociweb.com>
 
         * orbsvcs/orbsvcs/Event/EC_TPC_ProxyConsumer.cpp:
